--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,8 @@
 .profile__image {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -7,6 +11,26 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+}
+
+.profile__image:hover::before {
+  position: absolute;
+  z-index: 0;
+  content: '';
+  block-size: 100%;  
+  inline-size: 100%;
+  background-color: black;
+  opacity: 50%;
+}
+
+.profile__image:hover::after {
+  z-index: 1;
+  content: '';
+  block-size: 1.625rem;
+  inline-size: 1.625rem;
+  background-image: url('../../../images/edit-icon.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 740px) {
